# stable-diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/inference/: text2img.yaml
configs/sdscale/: train_sd.yaml
configs/toy/: train_latent_diffusion.yaml  train_pixel_ddpm.yaml
notebooks/: demo.ipynb
scripts/: infer_img2img.py  infer_inpaint.py  infer_text2img.py  train_latent_diffusion.py  train_sd_accelerate.py  train_unet_pixel_ddpm.py
sd/: __init__.py
sd/checkpoints/: __init__.py  converter.py  loader.py
sd/data/: __init__.py  datasets.py
sd/guidance/: __init__.py  cfg.py
sd/models/: __init__.py  layers.py  text_encoder.py  unet.py  vae.py
sd/pipelines/: __init__.py  base.py  img2img.py  inpaint.py  text2img.py
sd/schedulers/: __init__.py  base.py  ddim.py  ddpm.py
sd/utils/: __init__.py  device.py  distributed.py  ema.py  image_io.py  logging.py
